# flatland

./: .gitignore  Makefile  README.md  clean_all_assets.py  convert_png.py  cut_picture.py  diagnostics_client.py  flatland.html  game_lore.md  index.html  pyproject.toml  search.js  tile_yaml.py
.github/workflows/: ci.yml
assets/levels/: house_1.yaml  level_0.yaml  level_1.yaml  level_2.yaml
flatland/: __init__.py  __main__.py  actions.html  animations.html  consts.html  consts.py  game.html  game.py  interactions.html  internal.html  internal_representation.html  llm_stub.html  llm_stub.py  logger.html  logger.py  main.py  moderator.py  multiplayer.html  objects.html  registry.py  run_server.html  run_server.py  sensors.html  tilemap.py  utils.html  utils.py  world.html
flatland/actions/: __init__.py  actions.html  actions.py  volition.html  volition.py
flatland/animations/: __init__.py  animations.html  animations.py  render.html  render.py
flatland/interactions/: __init__.py  command.html  command.py  evolution.html  evolution.py  interactions.html  interactions.py  scheduler.html  scheduler.py
flatland/internal/: __init__.py  representation.html  representation.py  state.html  state.py
flatland/internal_representation/: __init__.py  internal_state.html  internal_state.py  object_representation.html  object_representation.py
flatland/multiplayer/: __init__.py  __main__.py  client.html  client.py  diagnostics_client.py  diagnostics_server.py  server.html  server.py
flatland/objects/: __init__.py  base_objects.html  base_objects.py  items.html  items.py  items_2.html  items_2.py  items_registry.html  items_registry.py  objects.py
flatland/sensors/: sensors.html  sensors.py
flatland/world/: __init__.py  build_tile_map.html  build_tile_map.py  level.html  level.py  level_factory.html  level_factory.py  register_to_level.html  register_to_level.py  register_to_world.html  register_to_world.py  tile_map.html  world.html  world.py
tests/: conftest.py  test_actions.py  test_integration.py  test_interaction.py  test_objects.py
