[tool.poetry]
name = "flatland"
version = "0.1.0"
description = "A 2D AI-driven RPG using pygame."
authors = ["Matteo Caorsi <m.caorsi@giotto.ai>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pygame = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
mypy = "*"
black = "*"
isort = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
  "pygame"
]
ignore_missing_imports = true