[tool.poetry]
name = "flatland"
version = "0.1.0"
description = "A 2D AI-driven RPG using pygame."
authors = ["Matteo Caorsi <m.caorsi@giotto.ai>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pygame = "^2.1.0"
pillow = "*"
pyyaml = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "*"
mypy = "*"
black = "*"
isort = "*"
pdoc = "*"
multiprocess = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.coverage.run]
omit = [
  "flatland/multiplayer/*",
  "flatland/run_server.py",
  "clean_all_assets.py",
  "cut_picture.py",
  "tile_yaml.py",
  "diagnostics*"
]

[[tool.mypy.overrides]]
module = [
  "pygame"
]
ignore_missing_imports = true